# async-ATCommand-GSM-for-Linux

./: .cproject  README.md
inc/: future.h  main.h
inc/packets/: basePackets.h  smsSendPackets.h
source/: .cproject  .project  CMakeLists.txt
source/inc/: Config.h  gsm.h  main.h  myQueue.h
source/inc/commands/: baseCommand.h  deleteSMS.h  disableCall.h  disableSMSNotif.h  getOperator.h  readSMS.h  smsTextMode.h
source/src/: gsm.c  main.c  myQueue.c
source/src/commands/: baseCommand.c  deleteSMS.c  disableCall.c  disableSMSNotif.c  getOperator.c  readSMS.c  smsSendCommand.c  smsTextMode.c
src/: future.c  main.c
src/commands/: smsSendCommand.c
src/packets/: basePackets.c  smsSendPackets.c
test/unittest/: .cproject  .project
test/unittest/TEST/: gtest_main.cpp  testCommand.cpp  testQueue.cpp  testReadSMS.cpp  testSMSCommand.cpp  test_factorial.cpp
test/unittest/gtest_src/gtest/: gtest-all.cc  gtest.h
test/unittest/inc/: fac.h  main.h  myQueue.h
test/unittest/inc/commands/: baseCommand.h  readSMS.h  smsSendCommand.h
test/unittest/src/: fac.c  main.c  myQueue.c
test/unittest/src/commands/: baseCommand.c  deleteSMS.c  disableCall.c  disableSMSNotif.c  readSMS.c  registerCommand.c  smsSendCommand.c  smsTextMode.c
